# XCommon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Code/: DateTime.hpp  Filesystem.cpp  Filesystem.hpp  Macros.hpp  Str.hpp  Timer.hpp  Typedefs.hpp
Tests/DateTime/: Test.DateTime.cmake  Test.DateTime.cpp
